19113
Given
```scala
scala> Float.NaN eq Float.NaN
<console>:11: error: value eq is not a member of Float
       Float.NaN eq Float.NaN
                 ^

scala> Float.NaN == Float.NaN
res1: Boolean = false

scala> Float.box(Float.NaN) eq Float.box(Float.NaN)
res2: Boolean = false

scala> Float.box(Float.NaN) == Float.box(Float.NaN)
res3: Boolean = true

scala> Float.NaN.asInstanceOf[AnyRef] eq Float.NaN.asInstanceOf[AnyRef]
res4: Boolean = false

scala> Float.NaN.asInstanceOf[AnyRef] == Float.NaN.asInstanceOf[AnyRef]
res5: Boolean = false
```

Why isn't res5 = true?
